--- a/index.css
+++ b/index.css
@@ -1,3 +1,51 @@
-#heading {
-    color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo {
+    width: 150px;
+}
+.nav-items {
+    padding: 0px 20px;
+    font-size: 24px;
+}
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+}
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+}
+.restaurant-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.restaurant-card {
+    margin: 5px;
+    width: 200px;
+    padding: 5px;
+}
+
+.restaurant-card:hover {
+    cursor: pointer;
+    border: solid 1px;
+}
+.search {
+    padding: 10px;
+}
+.restaurant-logo-container {
+    width: 100%;
+    height: 150px;
+}
+.restaurant-logo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.filter-btn {
+    cursor: pointer;
+    margin: 10px;
 }
