--- a/index.css
+++ b/index.css
@@ -27,7 +27,6 @@
     width: 200px;
     padding: 5px;
 }
-
 .restaurant-card:hover {
     cursor: pointer;
     border: solid 1px;
@@ -44,8 +43,19 @@
     height: 100%;
     object-fit: cover;
 }
-
 .filter-btn {
     cursor: pointer;
     margin: 10px;
+}
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+.shimmer-card {
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
+    margin: 5px;
+    padding: 5px;
 }
